# public/docs/openapi.yaml
@@ -79,11 +79,11 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: kuvalis.delilah@example.org
+                  example: viola.beer@example.net
                 password:
                   type: string
                   description: ''
-                  example: reiciendis
+                  example: numquam
               required:
                 - email
                 - password
@@ -310,7 +310,7 @@ paths:
         in: path
         name: lang
         description: ''
-        example: rerum
+        example: cupiditate
         required: true
         schema:
           type: string
@@ -449,19 +449,19 @@ paths:
                 username:
                   type: string
                   description: 'Must not be greater than 15 characters.'
-                  example: bii
+                  example: ''
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: kuhic.sibyl@example.org
+                  example: omari80@example.net
                 password:
                   type: string
                   description: 'Must be at least 8 characters.'
-                  example: gbn
+                  example: tvoufb
                 phone:
                   type: string
                   description: ''
-                  example: autem
+                  example: et
               required:
                 - username
                 - email
@@ -562,7 +562,7 @@ paths:
   '/api/v1/{lang}/user/purchase':
     post:
       summary: 'user purchase'
-      description: 'If  request have param '' cart and payment_id and amount '' exist and everything is okay, you''ll get a 200 OK response.'
+      description: 'If  request have param '' cart and payment_id and amount '' exist and everything is okay, you''ll get a 201 OK response.'
       parameters:
         -
           in: header
@@ -586,13 +586,64 @@ paths:
           schema:
             type: string
       responses:
-        200:
+        201:
           description: purchase
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: ''
+                type: object
+                example:
+                  data:
+                    transaction_id: ch_3KmcRyHBm3O5wniB0TUIofgp
+                    amount: 500
+                    currency: AED
+                    created_at: 04/09/2022
+                    cart:
+                      -
+                        name_en: enim
+                        name_ar: 'الاسم '
+                        price: 235
+                        currency: aed
+                        quantity: 2
+                    coupons:
+                      -
+                        key: U-443372-11273-1
+                        participate_with: 6
+                        created_at: '04/09/2022 11:04:31'
+                        product:
+                          name_ar: 'الاسم '
+                          name_en: enim
+                          image: 'http://safaqatek.test/images/product/product_00.jpg'
+                          closing_at: '05/05/2022 09:05:47'
+                          price: 235
+                          currency: aed
+                properties:
+                  data:
+                    type: object
+                    example:
+                      transaction_id: ch_3KmcRyHBm3O5wniB0TUIofgp
+                      amount: 500
+                      currency: AED
+                      created_at: 04/09/2022
+                      cart:
+                        -
+                          name_en: enim
+                          name_ar: 'الاسم '
+                          price: 235
+                          currency: aed
+                          quantity: 2
+                      coupons:
+                        -
+                          key: U-443372-11273-1
+                          participate_with: 6
+                          created_at: '04/09/2022 11:04:31'
+                          product:
+                            name_ar: 'الاسم '
+                            name_en: enim
+                            image: 'http://safaqatek.test/images/product/product_00.jpg'
+                            closing_at: '05/05/2022 09:05:47'
+                            price: 235
+                            currency: aed
       tags:
         - 'User management'
       requestBody:
@@ -605,11 +656,11 @@ paths:
                 amount:
                   type: string
                   description: ''
-                  example: pariatur
+                  example: suscipit
                 payment_id:
                   type: string
                   description: ''
-                  example: repellat
+                  example: iure
                 cart:
                   type: object
                   description: 'The Customer purchases  exempele [{"id":1,"quantity":2}] .'
@@ -625,11 +676,11 @@ paths:
                 lat:
                   type: string
                   description: 'The location lat .'
-                  example: vel
+                  example: nam
                 lng:
                   type: string
                   description: 'The location long .'
-                  example: tempora
+                  example: qui
               required:
                 - amount
                 - payment_id
@@ -719,10 +770,92 @@ paths:
         in: path
         name: lang
         description: ''
-        example: qui
+        example: veniam
         required: true
         schema:
           type: string
+  '/api/v1/{lang}/user/wishlists':
+    get:
+      summary: 'user wishlist'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: 'wishlists are exist'
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  data:
+                    -
+                      id: 1
+                      name_en: enim
+                      name_ar: 'الاسم '
+                      award_name_ar: 'أسم الجائزة بالعربي'
+                      award_name_en: numquam
+                      price: 235
+                      currency: null
+                      image: 'http://safaqatek.test/images/product/product_00.jpg'
+                      quantity: 200
+                      sold_out: 133
+                properties:
+                  data:
+                    type: array
+                    example:
+                      -
+                        id: 1
+                        name_en: enim
+                        name_ar: 'الاسم '
+                        award_name_ar: 'أسم الجائزة بالعربي'
+                        award_name_en: numquam
+                        price: 235
+                        currency: null
+                        image: 'http://safaqatek.test/images/product/product_00.jpg'
+                        quantity: 200
+                        sold_out: 133
+                    items:
+                      type: object
+      tags:
+        - 'User management'
+    parameters:
+      -
+        in: path
+        name: lang
+        description: ''
+        example: dignissimos
+        required: true
+        schema:
+          type: string
+      -
+        in: path
+        name: id
+        description: 'The ID of the p'
+        example: 2
+        required: true
+        schema:
+          type: integer
   '/api/v1/{lang}/product':
     post:
       summary: 'get product'
@@ -756,17 +889,103 @@ paths:
       -
         in: path
         name: lang
-        description: 'Optional parameter. The language.'
+        description: 'The language.'
+        example: en
         required: true
         schema:
           type: string
-        examples:
-          omitted:
-            summary: 'When the value is omitted'
-            value: ''
-          present:
-            summary: 'When the value is present'
-            value: en
+  '/api/v1/{lang}/product/wishlist/add/{id}':
+    get:
+      summary: 'add product to wishlist'
+      description: 'this route is called when the user wants to add a product to the Wish List'
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - 'product management'
+    parameters:
+      -
+        in: path
+        name: lang
+        description: 'The language.'
+        example: en
+        required: true
+        schema:
+          type: string
+      -
+        in: path
+        name: id
+        description: 'The ID of the product .'
+        example: 1
+        required: true
+        schema:
+          type: integer
+  '/api/v1/{lang}/product/wishlist/delete/{id}':
+    get:
+      summary: 'add product to wishlist'
+      description: 'this route is called when the user wants to delete a product to the Wish List'
+      parameters:
+        -
+          in: header
+          name: Authorization
+          description: ''
+          example: 'Bearer {YOUR_AUTH_KEY}'
+          schema:
+            type: string
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - 'product management'
+    parameters:
+      -
+        in: path
+        name: lang
+        description: 'The language.'
+        example: en
+        required: true
+        schema:
+          type: string
+      -
+        in: path
+        name: id
+        description: 'The ID of the product .'
+        example: 1
+        required: true
+        schema:
+          type: integer
   '/api/v1/{lang}/settings':
     get:
       summary: 'get settings'
